--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,6 @@
 # production
 /build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+/package-lock.json
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
